Fix for Flickering without sacrificing no-js

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,7 +15,6 @@
   --error-color: #b7615e;
   --primary-header-color: #011f2d;
   --secondary-header-color: #1d2326;
-  --max-content-width: 60rem;
 
   --link-color: #83a598;
   --select-foreground-color: #fbf1c7;
@@ -27,15 +26,6 @@
   --theme-select-dark-foreground: #fbf1c7;
   --theme-select-light-backgroung: #f2debf;
   --theme-select-light-foreground: #322b1e;
-
-  --reading-font-family: Helvetica, sans-serif;
-  --reading-font-size: 1rem;
-  --reading-paragraph-spacing: 0.0rem;
-  --reading-paragraph-indent: 3rem;
-  --reading-line-spacing: 1.0rem;
-  --reading-letter-spacing: 0rem;
-  --reading-word-spacing: 0rem;
-  --reading-text-align: left;
 }
 
 :root[data-theme="light"] {
